--- a/index.html
+++ b/index.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <h1>SARIA SAID</h1>
+    <p>
+      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Beatae, at
+      explicabo incidunt eius, neque perferendis et laudantium fugiat eligendi
+      atque rem ad, voluptatibus ducimus natus!
+    </p>
 
     <script src="main.js"></script>
-</body>
+  </body>
 </html>
